# speech-recognizer

./: .gitignore  DOCS  README.md  TODO  build-cdt.sh
docs/: example.m  links  mfcc.m  octave.m
docs/dtw/: dtw.m
docs/mfcc/: example.m
resources/: init-model.script
resources/alphabet/: init_codebook.sh
src/: CMakeLists.txt  common.h  config.h  main.cpp  test.cpp
src/_test/: CMakeLists.txt  math_DTW.cpp  math_MFCC.cpp
src/_test/audio/: Processor.cpp  ProcessorTest.cpp
src/_test/math/: BasicTest.cpp  BaumWelchTest.cpp  DTW.cpp  DTWTest.cpp  ForwardBackwardTest.cpp  MFCC.cpp  MFCCTest.cpp  Statistics.cpp
src/_test/model/: HmmHelper.h  HmmModelTest.cpp  ProcessorTest.cpp  Recognizer.cpp  RecognizerTest.cpp
src/audio/: CMakeLists.txt  Frame.cpp  Frame.h  Processor.cpp  Processor.h  Splitter.cpp  Splitter.h  WavData.cpp  WavData.h  Word.cpp  Word.h  audio.h  wav_reader.cpp  wav_reader.h
src/command/: AudioDataCommand.cpp  AudioDataCommand.h  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  Context.h  DrawDiagramCommand.h  HelpCommand.h  ICommand.h  ModelCommand.cpp  ModelCommand.h  ReadWavDataCommand.h  SplitWordsCommand.h  Storage.cpp  Storage.h  VisualizationCommand.cpp  VisualizationCommand.h
src/math/: Algorithm.cpp  Algorithm.h  Basic.cpp  Basic.h  BaumWelch.cpp  BaumWelch.h  CMakeLists.txt  DTW.cpp  DTW.h  ForwardBackward.cpp  ForwardBackward.h  MFCC.cpp  MFCC.h  Model.cpp  Model.h  Printer.cpp  Printer.h  Recognizer.cpp  Recognizer.h  Statistics.cpp  Statistics.h  maph.h  matf.h
src/model/: Alphabet.h  CMakeLists.txt  CodeBook.cpp  CodeBook.h  HmModel.cpp  HmModel.h  HmmModel.cpp  HmmModel.h  MfccEntry.cpp  MfccEntry.h  Model.cpp  Model.h  Processor.cpp  Processor.h  Recognizer.cpp  Recognizer.h  SimpleModel.cpp  SimpleModel.h  Storage.cpp  Storage.h
src/visual/: CMakeLists.txt  Painter.cpp  Painter.h  PngDrawer.cpp  PngDrawer.h  png_drawer.cpp  png_drawer.h  visual.h
src/visual/png++/: image.hpp
